*SVN*

* Added validates_exclusion_of as a negative of validates_inclusion_of

* Optimized counting of has_many associations by setting the association to empty if the count is 0 so repeated calls doesn't trigger database calls


*1.10.1* (20th April, 2005)

* Fixed frivilous database queries being triggered with eager loading on empty associations and other things

* Fixed order of loading in eager associations

* Fixed stray comma when using eager loading and ordering together from has_many associations #1143


*1.10.0* (19th April, 2005)

* Added eager loading of associations as a way to solve the N+1 problem more gracefully without piggy-back queries. Example:

    for post in Post.find(:all, :limit => 100)
      puts "Post:            " + post.title
      puts "Written by:      " + post.author.name
      puts "Last comment on: " + post.comments.first.created_on
    end
  
  This used to generate 301 database queries if all 100 posts had both author and comments. It can now be written as:
  
    for post in Post.find(:all, :limit => 100, :include => [ :author, :comments ])
 
  ...and the number of database queries needed is now 1.

* Added new unified Base.find API and deprecated the use of find_first and find_all. See the documentation for Base.find. Examples:

    Person.find(1, :conditions => "administrator = 1", :order => "created_on DESC")
    Person.find(1, 5, 6, :conditions => "administrator = 1", :order => "created_on DESC")
    Person.find(:first, :order => "created_on DESC", :offset => 5)
    Person.find(:all, :conditions => [ "category IN (?)", categories], :limit => 50)
    Person.find(:all, :offset => 10, :limit => 10)

* Added acts_as_nested_set #1000 [wschenk]. Introduction:

    This acts provides Nested Set functionality.  Nested Set is similiar to Tree, but with
    the added feature that you can select the children and all of it's descendants with
    a single query.  A good use case for this is a threaded post system, where you want